--- a/app/src/main/res/layout/activity_breed_list.xml
+++ b/app/src/main/res/layout/activity_breed_list.xml
@@ -14,7 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/text_color"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        tools:ignore="MissingConstraints" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/breed_recycler_view"
